gpg: Minor fix when building with --disable-exec

* g10/photoid.c (show_photo): No return for a void function.
--

GnuPG-bug-id: 7256